k8s/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proper-model
spec:
  replicas: 2
  selector:
    matchLabels:
      app: proper-model
  template:
    metadata:
      labels:
        app: proper-model
    spec:
      containers:
      - name: proper-model
        image: axoy/sentiment-analysis-proper_model:latest
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fallback-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fallback-model
  template:
    metadata:
      labels:
        app: fallback-model
    spec:
      containers:
      - name: fallback-model
        image: axoy/sentiment-analysis-fallback_model:latest
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  labels:
    app: web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: axoy/sentiment-web-ui:latest
          resources:
            requests:
              cpu: "200m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 80
