k8s/fallback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fallback-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fallback-model
  template:
    metadata:
      labels:
        app: fallback-model
    spec:
      containers:
      - name: fallback-model
        image: axoy/sentiment-analysis-fallback_model:latest
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 8000
