k8s/model-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: proper-model
spec:
  selector:
    app: proper-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
  externalTrafficPolicy: Cluster
---
apiVersion: v1
kind: Service
metadata:
  name: fallback-model
spec:
  selector:
    app: fallback-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: proper-model
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
